[package]
name = "morr"
version = "0.1.0"
authors = ["Anastasia Krasenkova <krasenkova.a@gmail.com>", "Michael Doronin <warrior2031@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
crossterm = "0.17"
memchr = { version = "2", default-features = false }
memmap = "0.7.0"
tempfile = "3"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
